Fix UKM crash. Add TODO for fixing this properly.

BUG=698819,695433

Review-Url: https://codereview.chromium.org/2736733004
Cr-Commit-Position: refs/heads/master@{#454998}

Former-commit-id: c88119049586f4a9e28fd8c2ba1fa7ccc25c335f